external-proxy/transparent/http-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: http
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/nativeSidecar: 'true'
        sidecar.istio.io/userVolume: '[{"name":"squidca","configMap":{"name":"proxy-trusted-cabundle"}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"squidca","mountPath":"/etc/pki/tls/certs","readOnly":true}]'
      creationTimestamp: null
      labels:
        app: http
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          imagePullPolicy: Always
          name: container
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/pki/tls/certs/ca-bundle.crt
              name: squidca
              subPath: ca-bundle.crt
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: httpcontent
          name: httpcontent
        - configMap:
            defaultMode: 420
            items:
              - key: ca-bundle.crt
                path: ca-bundle.crt
            name: proxy-trusted-cabundle
          name: squidca
