external-proxy/transparent/dr.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: squid-https
spec:
  exportTo:
    - .
  host: squid-proxy.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8443
        tls:
          caCertificates: /etc/pki/tls/certs/ca-bundle.crt
          mode: SIMPLE
